objects/PicklistEntry__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the actual picklist values that will be available for selection.  The Sort Order field is used to set the order when the Alpha Sort option on the Picklist is FALSE.  The Active field can be used to hide a picklist value and keep it in the list if needed for historical reasons.</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Note – added/requested by whom</inlineHelpText>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Set as FALSE to hide the item everywhere this is used</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <inlineHelpText>Picklist item display value</inlineHelpText>
        <label>Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <inlineHelpText>Picklist to which this selection item belongs</inlineHelpText>
        <label>Picklist</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <inlineHelpText>Items are sorted in ascending order with 1 as the top item.  Used when Alpha Sort is False</inlineHelpText>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PicklistEntry</label>
</CustomObject>